--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = ""
+name = "minifetch"
 version = "0.1.0"
-description = ""
+description = "Neofetch clone in python"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
